fix weird space on mobile

--- a/app/assets/stylesheets/landing.sass
+++ b/app/assets/stylesheets/landing.sass
@@ -36,7 +36,7 @@ body.employers_information.show
   .main.section#main
     padding-top: 0
     @media screen and (max-width: 960px)
-      padding-top: 12px
+      // padding-top: 12px
   footer
     margin-top: -0.75em
   #main-site-wrapper .site-header .lines,
